# serde-graphql-input

./: Cargo.toml  README.md  cuddle.yaml
.github/workflows/: ci.yml
crates/serde-graphql-input/: CHANGELOG.md  Cargo.toml  README.md
crates/serde-graphql-input/src/: error.rs  formatter.rs  lib.rs  serializer.rs
crates/serde-graphql-input/src/formatter/: compact.rs  pretty.rs
crates/serde-graphql-input/tests/: basic.rs  mod.rs  primitives.rs  structs.rs
