[package]
name = "serde_graphql_input"
description = "serde graphql input serializes to graphqls input objects, as used in graphql functions"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/kjuulh/serde-graphql-input"

publish = true

[dependencies]
anyhow.workspace = true
itoa = "1.0.11"
serde = { version = "1.0.197", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
